[package]
name = "orbtk"
description = "The Orbital Widget Toolkit"
repository = "https://github.com/redox-os/orbtk"
version = "0.2.0"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "orbtk"
path = "src/lib.rs"

[dependencies]
orbclient = {git = "git://github.com/LazyOxen/orbclient", branch="lin_gradient"}
orbfont = {git = "git://github.com/LazyOxen/orbfont"}
orbimage = {git = "git://github.com/LazyOxen/orbimage"}
